--- a/0x02-CSS_advanced/styles/11-style.css
+++ b/0x02-CSS_advanced/styles/11-style.css
@@ -75,7 +75,7 @@ h6 {
 }
 
 .section-tagline {
-  font-family: font-family-title;
-  font-weight: font-weight-bold;
+  font-family: var(--font-family-title);
+  font-weight: var(--font-weight-bold);
   text-transform: var(--section-tagline-transform);
 }
